--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -23,4 +23,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnRedoButton"
+        android:layout_width="172dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="227dp"
+        android:text="RETRY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txeScoreTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
